# dorna2_arm_ros

./: .gitattributes  .gitignore  README.md
dorna2_bringup/: CMakeLists.txt  package.xml
dorna2_bringup/launch/: dorna2_bringup.launch.py
dorna2_description/: CMakeLists.txt  package.xml
dorna2_description/launch/: display.launch.py
dorna2_description/meshes/dorna_2/: base.stl  base_link.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl
dorna2_description/meshes/dorna_ta/: base.stl  base_link.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
dorna2_description/rviz/: view_robot.rviz
dorna2_description/scripts/: fixed_joint_publisher.py
dorna2_description/urdf/: dorna2.urdf.xacro  dorna_2.urdf.xacro  dorna_ta.urdf.xacro  materials.xacro
dorna2_driver/: package.xml  setup.cfg  setup.py
dorna2_driver/config/: dorna2_params.yaml
dorna2_driver/dorna2_driver/: dorna2_node.py  dorna2_robot.py
dorna2_driver/launch/: dorna2_driver.launch.py
dorna2_gazebo/: CMakeLists.txt  package.xml
dorna2_gazebo/config/: ros2_controllers_5dof.yaml  ros2_controllers_6dof.yaml
dorna2_gazebo/launch/: gazebo.launch.py
dorna2_gazebo/urdf/: dorna2_gazebo.urdf.xacro
dorna2_gazebo/worlds/: empty.sdf
dorna2_interfaces/: CMakeLists.txt  package.xml
dorna2_interfaces/msg/: CartesianPose.msg  IOState.msg  RobotStatus.msg
dorna2_interfaces/srv/: CircleMove.srv  Connect.srv  Disconnect.srv  GetADC.srv  GetPID.srv  GetRobotInfo.srv  Halt.srv  Home.srv  Jog.srv  JointMove.srv  LinearMove.srv  PlayScript.srv  Probe.srv  SetAlarm.srv  SetAxisRatio.srv  SetEmergency.srv  SetError.srv  SetGravity.srv  SetJoint.srv  SetOutput.srv  SetPID.srv  SetPWM.srv  SetTool.srv  SetToollength.srv
dorna2_moveit_config/: CMakeLists.txt  package.xml
dorna2_moveit_config/config/: dorna2.srdf.xacro  dorna_2.srdf  dorna_ta.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers_5dof.yaml  moveit_controllers_6dof.yaml  ompl_planning.yaml
dorna2_moveit_config/launch/: move_group.launch.py
