<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dorna2_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files for Dorna 2 series robot arms</description>
  <maintainer email="hwimpy@lila.ai">Hannah Wimpy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dorna2_description</exec_depend>
  <exec_depend>dorna2_driver</exec_depend>
  <exec_depend>dorna2_interfaces</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
