<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dorna2_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver node for Dorna 2 series robot arms (TA, 2, 2S)</description>
  <maintainer email="hwimpy@lila.ai">Hannah Wimpy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dorna2_interfaces</depend>

  <exec_depend>dorna2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
